--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://youtube.com.br/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Tainã Melo</a> para o <a href="https://youtube.com.br/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
              
 
